--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_index_python
-	previous = 
-	base = 2424690
+	previous = 2424690
+	base = 4746b31
 	trim = 
 	trimbase = 
