--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/ament_index_cpp
-	previous = 
-	base = 352cab9
+	previous = 352cab9
+	base = d4a30a7
 	trim = 
 	trimbase = 
